fixed text below the form on small screen sizes

--- a/components/sections/Hero/Hero.module.css
+++ b/components/sections/Hero/Hero.module.css
@@ -264,7 +264,6 @@
 @media (width < 800px) {
   .hero {
     height: 100vh;
-    overflow: hidden;
   }
 
   .profileImageWrapper {
@@ -281,6 +280,7 @@
 
   .contactText {
     top: 97vh;
+    z-index: 20;
   }
   .tagline {
     width: 64%;
